--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+Example_ODK_Forms/Sampling_Without_Replacement/.DS_Store
+Example_ODK_Forms/.DS_Store
