--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ vignettes/*.pdf
 .Renviron
 Example_ODK_Forms/Sampling_Without_Replacement/.DS_Store
 Example_ODK_Forms/.DS_Store
+03_crontabs/.DS_Store
+02_ODK_Analyser/.DS_Store
+.DS_Store
